<resources>
    <string name="app_name">DaburEmployee</string>
    <string name="Open">EmpMyDabur</string>
    <string name="Close">EmpMyDabur</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="settings">Settings</string>
    <string name="my_profile">My Profile</string>
    <string-array name="StockiestName">
        <item>SHER I PUNJAB AGENCIES</item>
        <item>MAA BHUVNESHWARI</item>
        <item>MAHADEV ENT</item>
        <item>TUSHAR TRADING</item>
        <item>DURGA AGENCIES</item>
        <item>GUPTA COMPANY</item>
        <item>GAURI TRADERS</item>
        <item>SHANTI ENTERPRISE</item>
        <item>7 STAR</item>
        <item>JM DISTRIBUTOR</item>

    </string-array>
    <string name="npd">NEW PRODUCT</string>
    <string name="enter_ssm_name">Enter SSm Name</string>
    <string name="enter_stockiest_name">Enter Stockiest Name</string>
    <string name="enter_hommade_today_eco">Enter Hommade ECO</string>
    <string name="enter_active_today_eco">Enter Active Eco</string>
    <string name="enter_tomatopuree_today_eco">Enter TomatoPuree Eco</string>
    <string name="enter_coconutwater_today_eco">Enter Coconutwater Eco</string>
    <string name="submit">SUBMIT</string>
    <string name="date_button_set">Set Date</string>
    <string name="date_label_set">Press the button to set the date</string>
    <string name="date_view_set">The Date is: </string>
    <string name="date_selected"></string>
    <string-array name="MrpList">
        <item>5</item>
        <item>10</item>
        <item>20</item>
        <item>25</item>
        <item>99</item>
        <item>109</item>
        <item>120</item>
        <item>125</item>
        <item>110</item>
        <item>22</item>
        <item>23</item>
        <item>44</item>
        <item>70</item>
        <item>75</item>
    </string-array>
    <string name="header_msg">MY DABUR</string>
    <string name="footer_msg">MY DABUR</string>
    <string name="rate_calculation">Scheme Calculation</string>
    <string name="dailyusr">Daily Usr Report</string>
    <string name="dailyssm">Daily SSM Summary</string>
    <string name="mrp">MRP</string>
    <string name="upc">UPC</string>
    <string name="scheme">ENTER SCHEME</string>
    <string name="qty">ENTER QTY HERE</string>
    <string name="gross">GROSS</string>
    <string name="gstamnt">GST AMNT</string>
    <string name="head">HEAD</string>
    <string name="mrgn">RETAILER MARGIN</string>
    <string name="rate">RATE</string>
    <string name="sch">SCH</string>
    <string name="pcsrate">PER PCS</string>
    <string name="caserate">PER CASE</string>
    <string name="schamnt">SCHAMNT</string>
    <string name="netamnt">NETAMNT</string>
    <string name="gst">GST</string>
    <string name="amount">AMOUNT</string>
    <string name="rateaftercd">Rate After CD</string>
    <string name="freeissue">Free Issue</string>
    <string name="rateafterfreeissue">Rate After Free Issue</string>
    <string name="enter_quantity">QUANTITY</string>
    <string name="orangeltr">orangeltr</string>
</resources>