<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back1"
    android:id="@+id/drawer"
    android:orientation="vertical"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#062005"
        tools:context=".WelcomeScreen">

        <RelativeLayout
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="-1dp"
            android:background="#caf160">
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/footer"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_alignParentBottom="true"
            android:background="#111a09"
            >

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_alignParentTop="true"
                android:src="@drawable/daburlogo" />
            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginLeft="60dp"
                android:layout_alignParentTop="true"
                android:src="@drawable/daburlogo" />

            <TextView
                android:id="@+id/footer_text"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="125dp"

                android:gravity="center"
                android:text="@string/footer_msg"
                android:textColor="#f1e9e9"
                android:textSize="25sp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginLeft="270dp"
                android:layout_alignParentTop="true"
                android:src="@drawable/daburlogo" />

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"

                android:layout_marginLeft="330dp"
                android:layout_alignParentTop="true"
                android:src="@drawable/daburlogo" />

        </RelativeLayout>
        <ScrollView
            android:id="@+id/scroll_view"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_above="@+id/footer"
            android:layout_below="@+id/header"
            android:fillViewport="true">

            <LinearLayout
                android:id="@+id/myLayout"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="500dp"
                android:background="#FFFFFF"
                android:fillViewport="true">

                <VideoView
                    android:layout_width="fill_parent"
                    android:layout_height="300dp"
                    android:layout_gravity="center"

                    android:id="@+id/video"
                    android:layout_marginTop="10dp"/>

                <androidx.viewpager.widget.ViewPager
                    android:layout_marginTop="20dp"
                    android:id="@+id/pager"
                    android:layout_width="250dp"
                    android:layout_height="200dp"

                    android:layout_gravity="center"

                    android:layout_alignParentTop="true" />


                <androidx.recyclerview.widget.RecyclerView

                    android:id="@+id/recyclerv_view_horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="150dp">

                </androidx.recyclerview.widget.RecyclerView>

                <ImageButton
                    android:id="@+id/real_juice"
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:src="@drawable/realjuice"/>

                <ImageButton
                    android:id="@+id/active_ltr"
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:src="@drawable/activerange"/>
                <ImageButton
                    android:id="@+id/hmd"
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:src="@drawable/hommade1"/>
                <ImageButton
                    android:id="@+id/greetings"
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:src="@drawable/greetings"/>

                <ImageButton
                    android:id="@+id/advertising"
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:src="@drawable/advertising"/>

                <ImageButton
                    android:id="@+id/newlaunch"
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:src="@drawable/newlaunch"/>

                <ImageButton
                    android:id="@+id/ssmaction"
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:src="@drawable/ssminaction"/>

                <ImageButton
                    android:id="@+id/backtobasic"
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:src="@drawable/btob"/>



                <Button
                    android:text="DABUR PRODUCT DETAILS"
                    android:background="@drawable/button_rounded"
                    android:textSize="18dp"

                    android:textColor="#fff"

                    android:textStyle="bold"
                    android:layout_marginTop="5dp"
                    android:layout_width="340dp"
                    android:layout_gravity="center"
                    android:layout_height="wrap_content"
                    android:id="@+id/ProductRecycler"
                    />

                <Button
                    android:text="PRODUCTS"
                    android:textSize="18dp"
                    android:background="@drawable/button_rounded"
                    android:textColor="#fff"
                    android:textStyle="bold"
                    android:layout_marginTop="10dp"
                    android:layout_gravity="center"
                    android:layout_width="340dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/products"
                    />

                <Button
                    android:id="@+id/newproduct"
                    android:background="@drawable/button_rounded"
                    android:textSize="18dp"
                    android:textColor="#fff"
                    android:textStyle="bold"
                    android:layout_width="340dp"
                    android:layout_gravity="center"
                    android:layout_height="45dp"
                    android:text="@string/npd"
                    android:layout_marginTop="10dp"
                    />

                <Button
                android:id="@+id/schemecalculation"
                android:background="@drawable/button_rounded"
                android:textSize="18dp"
                android:textColor="#fff"
                android:layout_gravity="center"
                android:textStyle="bold"
                android:layout_width="340dp"
                android:layout_height="45dp"
                android:text="@string/rate_calculation"
                android:layout_marginTop="10dp"
                />
                <Button
                    android:id="@+id/dailyusrreport"
                    android:background="@drawable/button_rounded"
                    android:textSize="18dp"
                    android:textColor="#fff"
                    android:layout_gravity="center"
                    android:textStyle="bold"
                    android:layout_width="340dp"
                    android:layout_height="45dp"
                    android:text="@string/dailyusr"
                    android:layout_marginTop="10dp"
                    />

                <Button
                    android:id="@+id/dailyssmsummary"
                    android:background="@drawable/button_rounded"
                    android:textSize="18dp"
                    android:textColor="#fff"
                    android:layout_gravity="center"
                    android:textStyle="bold"
                    android:layout_width="340dp"
                    android:layout_height="45dp"
                    android:text="@string/dailyssm"
                    android:layout_marginTop="10dp"
                    />


                <Button
                    android:text="7 STEP OF SALES"
                    android:textSize="18dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/button_rounded"
                    android:textColor="#fff"
                    android:textStyle="bold"
                    android:layout_gravity="center"
                    android:layout_width="340dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/sevenstepsales"
                    />
                <Button
                    android:text="UPDATE YOUR APP HERE"
                    android:textSize="18dp"
                    android:background="@drawable/button_rounded"
                    android:textColor="#fff"
                    android:textStyle="bold"
                    android:layout_marginTop="10dp"
                    android:layout_gravity="center"
                    android:layout_width="340dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/updateapp"
                    />

                <androidx.viewpager.widget.ViewPager
                    android:layout_marginTop="20dp"

                    android:id="@+id/brandscheme"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"

                    android:layout_gravity="center"

                    android:layout_alignParentTop="true" />


                <ViewFlipper
                    android:id="@+id/v_flipper"
                    android:layout_gravity="center"
                    android:padding="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_marginTop="10dp" />




            </LinearLayout>
        </ScrollView>
    </RelativeLayout>

    <com.google.android.material.navigation.NavigationView
        android:layout_height="wrap_content"
        android:layout_width="230dp"
        android:background="@drawable/back1"
        android:id="@+id/nav_view"
        android:layout_gravity="start"
        app:headerLayout="@layout/navigation_header"
        app:menu="@menu/navigation_menu">

    </com.google.android.material.navigation.NavigationView>


</androidx.drawerlayout.widget.DrawerLayout>